// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<ForwardRef(forwardRef)
  className="ReplyList-root"
  data-testid="commentReplyList-comment-id"
  id="coral-comments-replyList-log--comment-id"
  role="log"
>
  <FadeInTransition
    active={false}
    key="comment-1"
  >
    <Relay(IgnoredTombstoneOrHideContainer)
      comment={
        Object {
          "id": "comment-1",
        }
      }
      viewer={null}
    >
      <ForwardRef(forwardRef)
        key="comment-1"
      >
        <CollapsableComment>
          <Component />
        </CollapsableComment>
      </ForwardRef(forwardRef)>
    </Relay(IgnoredTombstoneOrHideContainer)>
  </FadeInTransition>
  <FadeInTransition
    active={false}
    key="comment-2"
  >
    <Relay(IgnoredTombstoneOrHideContainer)
      comment={
        Object {
          "id": "comment-2",
          "showConversationLink": true,
        }
      }
      viewer={null}
    >
      <ForwardRef(forwardRef)
        key="comment-2"
      >
        <CollapsableComment>
          <Component />
        </CollapsableComment>
      </ForwardRef(forwardRef)>
    </Relay(IgnoredTombstoneOrHideContainer)>
  </FadeInTransition>
</ForwardRef(forwardRef)>
`;

exports[`when there is more disables load more button 1`] = `
<ForwardRef(forwardRef)
  className="ReplyList-root"
  data-testid="commentReplyList-comment-id"
  id="coral-comments-replyList-log--comment-id"
  role="log"
>
  <FadeInTransition
    active={false}
    key="comment-1"
  >
    <Relay(IgnoredTombstoneOrHideContainer)
      comment={
        Object {
          "id": "comment-1",
        }
      }
      viewer={null}
    >
      <ForwardRef(forwardRef)
        key="comment-1"
      >
        <CollapsableComment>
          <Component />
        </CollapsableComment>
      </ForwardRef(forwardRef)>
    </Relay(IgnoredTombstoneOrHideContainer)>
  </FadeInTransition>
  <FadeInTransition
    active={false}
    key="comment-2"
  >
    <Relay(IgnoredTombstoneOrHideContainer)
      comment={
        Object {
          "id": "comment-2",
        }
      }
      viewer={null}
    >
      <ForwardRef(forwardRef)
        key="comment-2"
      >
        <CollapsableComment>
          <Component />
        </CollapsableComment>
      </ForwardRef(forwardRef)>
    </Relay(IgnoredTombstoneOrHideContainer)>
  </FadeInTransition>
  <Indent
    level={1}
    noBorder={true}
  >
    <Localized
      id="comments-replyList-showAll"
    >
      <ForwardRef(forwardRef)
        aria-controls="coral-comments-replyList-log--comment-id"
        className="coral coral-replyList-showAllButton"
        disabled={true}
        fullWidth={true}
        id="coral-comments-replyList-showAll--comment-id"
        onClick={[Function]}
        variant="outlined"
      >
        Show All Replies
      </ForwardRef(forwardRef)>
    </Localized>
  </Indent>
</ForwardRef(forwardRef)>
`;

exports[`when there is more renders a load more button 1`] = `
<ForwardRef(forwardRef)
  className="ReplyList-root"
  data-testid="commentReplyList-comment-id"
  id="coral-comments-replyList-log--comment-id"
  role="log"
>
  <FadeInTransition
    active={false}
    key="comment-1"
  >
    <Relay(IgnoredTombstoneOrHideContainer)
      comment={
        Object {
          "id": "comment-1",
        }
      }
      viewer={null}
    >
      <ForwardRef(forwardRef)
        key="comment-1"
      >
        <CollapsableComment>
          <Component />
        </CollapsableComment>
      </ForwardRef(forwardRef)>
    </Relay(IgnoredTombstoneOrHideContainer)>
  </FadeInTransition>
  <FadeInTransition
    active={false}
    key="comment-2"
  >
    <Relay(IgnoredTombstoneOrHideContainer)
      comment={
        Object {
          "id": "comment-2",
        }
      }
      viewer={null}
    >
      <ForwardRef(forwardRef)
        key="comment-2"
      >
        <CollapsableComment>
          <Component />
        </CollapsableComment>
      </ForwardRef(forwardRef)>
    </Relay(IgnoredTombstoneOrHideContainer)>
  </FadeInTransition>
  <Indent
    level={1}
    noBorder={true}
  >
    <Localized
      id="comments-replyList-showAll"
    >
      <ForwardRef(forwardRef)
        aria-controls="coral-comments-replyList-log--comment-id"
        className="coral coral-replyList-showAllButton"
        disabled={false}
        fullWidth={true}
        id="coral-comments-replyList-showAll--comment-id"
        onClick={[Function]}
        variant="outlined"
      >
        Show All Replies
      </ForwardRef(forwardRef)>
    </Localized>
  </Indent>
</ForwardRef(forwardRef)>
`;
